Correcting Spacing between Label Padding

--- a/module2-solution/css/responsive.css
+++ b/module2-solution/css/responsive.css
@@ -4,11 +4,11 @@
 
 span {
 	border: 1px solid black;
-	padding-left: 2px;
-	padding-right: 2px;	
+	padding-left: 8px;
+	padding-right: 8px;	
 	position: relative;
 	top: -20px;
-	right: -6px;			
+	right: -6px;		
 }
 
 span#label-apple {
